Added keto.js and keto.css

--- a/ketoindex.html
+++ b/ketoindex.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/keto.css">
     <title>Keto Diet Page</title>
+
 </head>
 <body>
     <header>
@@ -32,5 +34,7 @@
             <li>Although a reduction of sugar intake can be great, we still require some sugar in our diets so that our bodies function properly. </li>
         </ul>
     </div>
+
+    <script src="./assets/js/keto.js"></script>
 </body>
 </html>
