Updated recipe button

--- a/veganIndex.html
+++ b/veganIndex.html
@@ -88,19 +88,14 @@
       <h2>Random Recipe</h2>
       <figure class="random-recipe">
         <h3 id="recipe-name"></h3>
-        <img src="" alt="" id="food-img">
+        <img src="" alt="" id="food-img">          
+        <a id="recipe-site">Site to recipe</a>
         <ul id="list-ingred">
           <p class="font-semibold">Lists of Ingredients</p>
-          <!-- <li class="list-ingred"></li>
-          <li class="list-ingred"></li>
-          <li class="list-ingred"></li>
-          <li class="list-ingred"></li>
-          <li class="list-ingred"></li>
-          <li class="list-ingred"></li>
-          <li class="list-ingred"></li>
-          <li class="list-ingred"></li> -->
 
-          <a id="recipe-site" href="data.hits[i].recipe.url">Site to recipe</a>
+        </ul>
+        <ul id="nutrient">
+          <p class="font-semibold">List of Key Nutrients</p>
         </ul>
         <button id="generate" class="bg-green-500 text-white hover:bg-green-200 font-bold py-2 px-4 mt-3 rounded items-center rounded">Generate Another Recipe</button>
       </figure>
