styled page a bit and continued working on js

--- a/veganIndex.html
+++ b/veganIndex.html
@@ -72,7 +72,7 @@
         <li>*There are a few nutrients that individuals following a vegan diet should be mindful to get enough of, including vitamin B12, calcium, iron and certain omega-3 fatty acids.</li>
       </ul>
       <article>
-        <p>While the vegan diet can be very nutrient-rich, there are a few nutrients to be particularly aware of when adopting this style of eating: most notably vitamin B12, calcium, certain omega-3 fatty acids and iron. <br><br>
+        <p class="flex justify-center ">While the vegan diet can be very nutrient-rich, there are a few nutrients to be particularly aware of when adopting this style of eating: most notably vitamin B12, calcium, certain omega-3 fatty acids and iron. <br><br>
         </p>
         <aside class="grid grid-cols-2 gap-6">
           <p>
@@ -97,7 +97,7 @@
       <figure class="flex flex-col items-center">
         <h3 id="recipe-name" class="flex justify-items-center font-bold"></h3>
         <img src="" alt="" id="food-img">          
-        <a id="recipe-site" class="font-semibold py-2">Site to recipe </a>
+        <a id="recipe-site" class="font-semibold py-2">&#8594; Link to Recipe &#8592;</a>
         <figure class="grid grid-cols-2 gap-6">        
           <ul id="list-ingred" class="">
           <p class="font-semibold flex py-2">Lists of Ingredients <br></p>
@@ -105,6 +105,12 @@
 
           <ul id="nutrient" class="">
             <p class="font-semibold py-2">List of Key Nutrients</p>
+            <li class="omega3"></li>
+            <li class="protein"></li>
+            <li class="calcium"></li>
+            <li class="iron"></li>
+            <li class="vitB12"></li>
+            <li class="vitD"></li>
           </ul></figure>
 
         <button id="generate" class="bg-green-500 text-white hover:bg-green-200 font-bold py-2 px-4 mt-3 ">Generate Another Recipe</button>
