Edited information on Vegan Diet on HTML

--- a/veganIndex.html
+++ b/veganIndex.html
@@ -61,31 +61,31 @@
     <img class="h-1/4 w-3/4 object-none " src="https://images.indianexpress.com/2022/01/pexels-viktoria-slowikowska-5677793.jpg" alt="">
     <article class="">
       <h2 class="flex flex-col items-center font-semibold">What is a Vegan Diet</h2> <br>
-      <p class="">Vegan diets are made up of only plant-based foods. This type of diet includes fruits, vegetables, soy, legumes, nuts and nut butters, plant-based dairy alternatives, sprouted or fermented plant foods and whole grains. Vegan diets don’t include animal foods like eggs, dairy, meat, poultry or seafood. They also are devoid of animal byproducts such as honey (made by bees) and lesser-known animal-based ingredients like whey, casein, lactose, egg white albumen, gelatin, carmine, shellac, animal-derived vitamin D3 and fish-derived omega-3 fatty acids.</p><br>
+      <p class="">The Vegan diets are made up of only plant-based foods. Fruits, vegetables, soy, legumes, nuts and nut butters, dairy substitutes made from plants, sprouted or fermented plant foods, and whole grains are all part of this diet pattern. Vegan diets exclude animal products such dairy, meat, poultry, eggs, and shellfish. Additionally, they are free of animal byproducts like honey (produced by bees) and less well-known animal-based ingredients like whey, casein, lactose, egg white albumen, gelatin, carmine, shellac, vitamin D3 derived from animals, and omega-3 fatty acids derived from fish. Honey is a byproduct made by bees.</p><br>
 
       <h2 class="flex flex-col items-center font-semibold">Veganism and Health</h2> <br>
-      <p>The foods emphasized in a vegan diet are rich in many nutrients like vitamins A, C, E and K, fiber, antioxidants and phytonutrients. Vegan diets have been studied for their impact on human health. Below are some highlights.</p><br>
+      <p>The vegan diet emphasizes foods that are high in fiber, phytonutrients, antioxidants, and vitamins A, C, E, and K. The effects of vegan diets on people's health have been researched. Here are a few of the highlights.</p><br>
       <h2 class="flex flex-col items-center font-semibold">Highlights</h2>
       <ul class="grid grid-cols-4"> 
         <li></li>
-        <li>*Vegan diets only include plant-based foods.</li>
-        <li>*There are a few nutrients that individuals following a vegan diet should be mindful to get enough of, including vitamin B12, calcium, iron and certain omega-3 fatty acids.</li>
+        <li>*In vegan diets, only plant-based foods are consumed.</li>
+        <li>*Vegans need be careful to get adequate amounts of essential nutrients, such as vitamin B12, calcium, iron, and certain omega-3 fatty acids.</li>
       </ul>
       <article>
-        <p class="flex justify-center ">While the vegan diet can be very nutrient-rich, there are a few nutrients to be particularly aware of when adopting this style of eating: most notably vitamin B12, calcium, certain omega-3 fatty acids and iron. <br><br>
+        <p class="flex justify-center ">Even though a vegan diet can be very nutrient-dense, there are some nutrients to pay special attention to when implementing this eating pattern. These include vitamin B12, calcium, some omega-3 fatty acids, and iron.<br><br>
         </p>
         <aside class="grid grid-cols-2 gap-6">
           <p>
-            <b>Vitamin B12</b>is important for metabolism, heart, nerve and muscle health and it’s mostly found in animal products. Those following a vegan diet should opt for foods fortified with B12. Moreover, individuals following a vegan diet should communicate with a health care provider about monitoring their levels of B12 and their potential need for a supplement, keeping in mind that a deficiency in B12 could take years to manifest on a blood test. <br><br>
+            <b>Vitamin B12</b>is essential for metabolic, heart, nerve, and muscle function and is found mostly in animal sources. Those on a vegan diet should choose B12-fortified foods. Furthermore, vegans should consult with their doctor about monitoring their B12 levels and the potential need for a supplement, keeping in mind that a B12 deficiency can take years to show up on a blood test. <br><br>
         </p>
         <p>
-          <b>Iron</b>is a vital component of metabolism and heart health. It is found mostly in animal foods. Although fortified whole grains, beans, lentils, spinach and other plant-based foods provide iron, it’s in the form of non-heme iron, which is not as bioavailable as the heme iron found in animal foods. <br> <br>
+          <b>Iron</b>is essential for metabolism and heart function. It is largely present in animal feeds. Although iron is present in fortified whole grains, beans, lentils, spinach, and other plant-based foods, it is not as bioavailable as heme iron found in animal foods. <br> <br>
         </p>
         <p>
-          <b>Calcium</b>is essential for dental, nerve, bone and muscle health and it is best absorbed with vitamin D. This nutrient is found predominantly in dairy foods and in lesser amounts in leafy greens like kale and broccoli. It is also found in fortified foods, such as tofu, bread and plant-based dairy alternatives. A systematic review found that individuals following a vegan or vegetarian diet had lower bone mineral density and higher fracture rates. Because calcium and vitamin D are key to bone health, those on a vegan diet are advised to talk to their healthcare provider to determine whether a supplement may be necessary. <br> <br>
+          <b>Calcium</b>is necessary for tooth, nerve, bone, and muscle health and is best absorbed when combined with vitamin D. This vitamin is mostly found in dairy foods and, to a smaller extent, in leafy greens such as kale and broccoli. It's also in fortified foods like tofu, bread, and plant-based dairy substitutes. According to a comprehensive analysis, those who eat a vegan or vegetarian diet had poorer bone mineral density and greater fracture rates. Because calcium and vitamin D are important for bone health, vegans should consult with their healthcare provider to see if a supplement is necessary. <br> <br>
         </p>
         <p>
-          <b>Omega-3</b>fatty acids are a type of polyunsaturated fat shown to support cardiovascular health. The three most common types we eat are alpha-linolenic acid (ALA), eicosapentaenoic acid (EPA) and docosahexaenoic acid (DHA). ALA is found in plant sources like flaxseed, chia seeds and walnuts, but EPA and DHA are found mainly in animal foods with the exception of some marine plant sources. ALA is converted by our bodies into EPA and DHA, but only in small quantities. Vegan options for EPA and DHA are microalgae and seaweed food products or supplements.
+          <b>Omega-3</b>fatty acids are a form of polyunsaturated fat that has been demonstrated to be beneficial to cardiovascular health. Alpha-linolenic acid (ALA), eicosapentaenoic acid (EPA), and docosahexaenoic acid (DHA) are the three most prevalent forms humans consume. Plant sources of ALA include flaxseed, chia seeds, and walnuts, but EPA and DHA are mostly found in animal meals, with the exception of select marine plant sources. Our bodies convert ALA into EPA and DHA, but only in modest amounts. Microalgae and seaweed dietary items or supplements are vegan sources of EPA and DHA.
         </p>
       </aside>
 
