--- a/homepage.html
+++ b/homepage.html
@@ -8,15 +8,22 @@
     <title>Food Focus!</title>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/homepagestyle.css">
+    <link rel="stylesheet" href="./Homepage Assets/css/homepagestyle.css">
 </head>
+<header>
+    <h1>Welcome</h1>
+</header>
 
 <body>
+
+
+
+
 
     <!--Menu form to navigate between pages-->
 
     <select class="form-select" aria-label="Default select example">
-        <option selected>Help Menu</option>
+        <option selected>Menu</option>
         <option value="1">Vegan</option>
         <option value="2">Keto</option>
         <option value="3">Gluten-Free</option>
@@ -24,43 +31,31 @@
 
 
     <!--Opening NAV BAR-->
-    <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-        <a class="navbar-brand" href="#">Food FOCUS - A Site for Novice Programmers</a>
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a class="nav-link" href="#scrollspyHeading1">First</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#scrollspyHeading2">Second</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                    aria-expanded="false">Menu</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
-                    <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
+
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
         data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
-        <h4 id="scrollspyHeading1">First heading</h4>
+        <h4 id="scrollspyHeading1">Assignment</h4>
         <p>...</p>
-        <h4 id="scrollspyHeading2">Second heading</h4>
+        <h4 id="scrollspyHeading2">Purpose</h4>
         <p>...</p>
-        <h4 id="scrollspyHeading3">Third heading</h4>
-        <p>...</p>
-        <h4 id="scrollspyHeading4">Fourth heading</h4>
-        <p>...</p>
-        <h4 id="scrollspyHeading5">Fifth heading</h4>
+        <h4 id="scrollspyHeading3">Contributors</h4>
         <p>...</p>
     </div>
 
+
+    <div class="clearfix">
+        <img src="./Homepage Assets/brainfood_image.jpg" class="col-md-4 float-md-end mb-3 ms-md-3" alt="Brain Food">
+
+        <p>
+            Paragraph 1
+        </p>
+
+        <p>
+            Paragraph 2
+        </p>
+
+
+    </div>
 
     <button type="button" class="btn btn-light">Email the Team!</button>
 
