--- a/Vegan/veganIndex.html
+++ b/Vegan/veganIndex.html
@@ -14,7 +14,7 @@
 <body>
   <header class="flex flex-col items-center self-center text-5xl font-semibold whitespace-nowrap dark:text-white">Food Focus</header>
 
-  <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 ">
+  <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700 m-0">
     <div class=" flex flex-wrap justify-center m-0">
       <a href="#" class="m-0">
           <span class="self-center text-5xl font-semibold whitespace-nowrap dark:text-white m-0">Vegan</span>
@@ -25,11 +25,11 @@
       </button>
       <div class="hidden w-full md:block " id="navbar-dropdown">
         <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 justify-center self">
-          <li>
-            <a href="#" class="block py-2 pl-3 pr-4 rounded md:bg-transparent  md:p-0  md:dark:bg-transparent" aria-current="page">Home Page</a>
+          <li class="m-0">
+            <a href="../homepage.html" class="block py-2 pl-3 pr-4 rounded md:bg-transparent  md:p-0  md:dark:bg-transparent" aria-current="page">Home Page</a>
           </li>
-          <li>
-              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 pl-3 pr-4 rounded md:p-0 md:w-auto font-bold">Press Me! <svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></button>
+          <li class="m-0">
+              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-even w-full py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent  font-bold">Index<svg class="w-5 h-5 ml-1" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></button>
               <!-- Dropdown menu -->
               <div id="dropdownNavbar" class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                   <ul class="py-2 text-sm text-gray-700 dark:text-gray-400" aria-labelledby="dropdownLargeButton">
@@ -45,10 +45,10 @@
                   </ul>
               </div>
           </li>
-          <li>
-            <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Recipe Index</a>
+          <li class="m-0">
+            <a href="#recipe-site" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Recipe</a>
           </li>
-          <li>
+          <li class="m-0">
             <a href="#" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
           </li>
         </ul>
@@ -141,7 +141,7 @@
   crossorigin="anonymous">
   </script>
 
-  <!-- <script src="./js/vegan.js"></script> -->
+  <script src="./js/vegan.js"></script>
   
 </body>
 </html>
