--- a/ketoindex.html
+++ b/ketoindex.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/keto.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Keto Diet Page</title>
 
 </head>
 <body>
-    <header>
+    <nav>
+        <ul class="nav">
+            <!--Main page-->
+            <li><a button="link" href="./mainindex.html">Food Focus Main Page</a></li>
+            <!--Keto Information-->
+            <li><a href="./ketoindex.html">Keto Diet Page</a></li>
+            <!--Keto recipes-->
+            <li><a href="">Keto Recipes</a></li>
+        </ul>
+    </nav>
+
+    <div>
         <h1>The Ketogenic Diet</h1>
         <h2>Life in Ketosis</h2>
-    </header>
-
+    </div>
     <div>
         <h2>What is the Keto Diet?</h2>
         <p>The keto deit is a low carb diet that looks to replace sugars and carbohydrates with a diet high in fats in addition to proteins. </p>
