added JavaScript for recipe input and fixed header Elelemnt

--- a/glutenindex.html
+++ b/glutenindex.html
@@ -131,7 +131,7 @@
     
     <h2> Gluten Free Recipes</h2>    
     
-    <!-- Area for restaurant search input -->
+    <!-- Area for restaurant search input to be connected to API -->
     <div id="recipe-Search" > 
 
     </div> 
@@ -142,7 +142,7 @@
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.min.js"></script> -->
 
-<script src="gluten-assets/glutenscript.js"></script>
+<script src="./gluten-assets/glutenscript.js"></script>
 
 </body>
 </html> 
