--- a/Vegan/veganIndex.html
+++ b/Vegan/veganIndex.html
@@ -68,7 +68,7 @@
       <h2 class="flex flex-col items-center font-semibold">Highlights</h2>
       <ul class="grid grid-cols-4"> 
         <li></li>
-        <li>*In vegan diets, only plant-based foods are consumed.</li>
+        <li>*In vegan diets, only plant-based foods are consumed and helps promotes concentration and memory.</li>
         <li>*Vegans need be careful to get adequate amounts of essential nutrients, such as vitamin B12, calcium, iron, and certain omega-3 fatty acids.</li>
       </ul>
       <article>
@@ -135,11 +135,11 @@
   crossorigin="anonymous" 
   referrerpolicy="no-referrer">
   </script>
-  <script 
+  <!-- <script 
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" 
   crossorigin="anonymous">
-  </script>
+  </script> -->
 
   <script src="./js/vegan.js"></script>
   
