Homepage edits on design

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <br><br><br><br>
 
+<p> <u>Click on an Image Below to View a Specific Food Category </u></p>
+<br>
+
     <section class="topicSection">
         <a href="veganIndex.html"><img src="./Homepage Assets/vegan_mainIMG.jpg" alt="Vegan" width="500"
                 height="600"></a>
@@ -51,11 +54,11 @@
         <span class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"></span>
     </span>
 
-    <div id="emailButton">
+    <a href = "mailto: paulnxn1@gmail.com">
         <button
             class="transition ease-in-out delay-200 bg-silver-500 hover:-translate-y-1 hover:scale-130 hover:bg-yellow-500 duration-300 button">
             Email or Contact Us!
-        </button>
+        </button></a>
 
 
 </body>
