--- a/Keto/ketoindex.html
+++ b/Keto/ketoindex.html
@@ -27,13 +27,13 @@
     </header>
     <div>
         <h2>What is the Keto Diet?</h2>
-        <p>The keto deit is a low carb diet that looks to replace sugars and carbohydrates with a diet high in fats in addition to proteins. </p>
+        <p>The keto diet is a low carb diet that looks to replace sugars and carbohydrates with a diet high in fats in addition to proteins. </p>
     </div>
 
     <div>
         <h2 class="pros">Pros:</h2>
         <ul>
-            <li>Studies suggest that while in ketosis, subejcts reported a decrease in hunger.</li>
+            <li>Studies suggest that while in ketosis, subjects reported a decrease in hunger.</li>
             <li>The ketogenic diet excludes sugar, many carbohydrates, and most processed foods.</li>
             <li>A ketogenic diet has even been shown to reduce seizures in pediatric patients with epilepsy.</li>
         </ul>
