--- a/Gluten/glutenindex.html
+++ b/Gluten/glutenindex.html
@@ -19,7 +19,7 @@
   <!-- Toolbar using foundation formatting -->
     <ul class="menu align-left">
   <!--Links to the main index page  -->
-        <li class="is-active"><a href="./index.html">Main</a></li>
+        <li class="is-active"><a href="../index.html">Main</a></li>
   <!-- Links to the Gluten Free Home page/index.html  -->
         <li><a href="./glutenindex.html">Gluten Home</a></li>
 <!-- Will link to the recipes API -->
