Updated link for vegan

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 
     <section class="topicSection">
-        <a href="veganIndex.html"><img src="./Homepage Assets/vegan_mainIMG.jpg" alt="Vegan" width="500"
+        <a href="Vegan/veganIndex.html"><img src="./Homepage Assets/vegan_mainIMG.jpg" alt="Vegan" width="500"
                 height="600"></a>
         <a href="Gluten/glutenindex.html"><img src="Homepage Assets/glutenfree_img.jpg" alt="Gluten-Free" width="500"
                 height="600"> </a>
