--- a/Vegan/veganIndex.html
+++ b/Vegan/veganIndex.html
@@ -141,7 +141,7 @@
   crossorigin="anonymous">
   </script> -->
 
-  <script src="./js/vegan.js"></script>
+  <script src="../Vegan/js/vegan.js"></script>
   
 </body>
 </html>
