Added more context to footer region

--- a/index.html
+++ b/index.html
@@ -42,17 +42,23 @@
 
     <br>
 
-
+      <div>
+        <p> We would love to hear from you!</p>  
+        <p> Share your experience!</p>
+      </div>
 
     <span class="relative flex h-3 w-10">
         <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"></span>
         <span class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"></span>
     </span>
 
+
+  
+
     <a href = "mailto: paulnxn1@gmail.com">
         <button
             class="transition ease-in-out delay-200 bg-silver-500 hover:-translate-y-1 hover:scale-130 hover:bg-yellow-500 duration-300 button">
-            Email or Contact Us!
+            Click here: Email or Contact Us!
         </button></a>
 
 
