--- a/Keto/ketoindex.html
+++ b/Keto/ketoindex.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-    <nav>
-        <ul class="flex items-center justify-between border-y-green-700">
+    <nav class="border-solid border-8 border-green-600 h-15">
+        <ul class="flex items-center justify-between">
             <!--Main page-->
             <li><a href="../index.html">Food Focus Main Page</a></li>
             <!--Keto Information-->
@@ -23,8 +23,8 @@
     
 
     <header class="header">
-        <h1>The Ketogenic Diet</h1>
-        <h2>Life in Ketosis</h2>
+        <h1 class="flex flex-col items-center">The Ketogenic Diet</h1>
+        <h2 class="flex flex-col items-center">Life in Ketosis</h2>
     </header>
     <div>
         <h2>What is the Keto Diet?</h2>
