--- a/Keto/ketoindex.html
+++ b/Keto/ketoindex.html
@@ -26,21 +26,23 @@
         <h1 class="flex flex-col items-center">The Ketogenic Diet</h1>
         <h2 class="flex flex-col items-center">Life in Ketosis</h2>
     </header>
+    <!--What is keto Div-->
     <div>
-        <h2>What is the Keto Diet?</h2>
-        <p>The keto diet is a low carb diet that looks to replace sugars and carbohydrates with a diet high in fats in addition to proteins. </p>
+        <h2 class="flex flex-col items-center">What is the Keto Diet?</h2>
+        <p class="flex flex-col items-center">The keto diet is a low carb diet that looks to replace sugars and carbohydrates with a diet high in fats in addition to proteins. </p>
     </div>
 
-    <div>
-        <h2 class="pros">Pros:</h2>
-        <ul>
+            <!--Pros/Cons div-->
+    <div class="flex flex-col items-center">
+        <ul class=" list-disc">
+            <h2 class="pros">Pros:</h2>
             <li>Studies suggest that while in ketosis, subjects reported a decrease in hunger.</li>
             <li>The ketogenic diet excludes sugar, many carbohydrates, and most processed foods.</li>
             <li>A ketogenic diet has even been shown to reduce seizures in pediatric patients with epilepsy.</li>
         </ul>
 
-        <h2 class="cons">Cons:</h2>
-        <ul>
+        <ul class="list-disc">
+            <h2 class="cons">Cons:</h2>
             <li>Due to high fat consumption, there are potential risks to the health of one's heart.</li>
             <li>The keto diet's benefits can be negated if not properly followed. Many everday foods fall outside of the accepted diet plan and can interrupt ketosis.</li>
             <li>Although a reduction of sugar intake can be great, we still require some sugar in our diets so that our bodies function properly. </li>
