--- a/Keto/ketoindex.html
+++ b/Keto/ketoindex.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <!--Nav Bar-->
     <nav class="border-solid border-8 border-green-600 h-15">
         <ul class="flex items-center justify-between">
             <!--Main page-->
@@ -29,7 +30,7 @@
     <!--What is keto Div-->
     <div>
         <h2 class="flex flex-col items-center">What is the Keto Diet?</h2>
-        <p class="flex flex-col items-center">The keto diet is a low carb diet that looks to replace sugars and carbohydrates with a diet high in fats in addition to proteins. </p>
+        <p class="flex flex-col items-center px-10">The ketogenic diet is an eating pattern that includes high amounts of fat, low to moderate amounts of protein, and very little carbohydrates. The keto diet is typically rich in foods like butter, cheese, eggs, meat, nuts, oils, seafood, and seeds. It does not allow much, if any, room for fruits, vegetables, grains, potatoes, sweets, or other carbohydrate-rich foods. By restricting carbohydrates and monitoring protein intake, a ketogenic diet aims to put your body in a state of nutritional ketosis, a metabolic process that increases the production of ketones, which are made by the liver and can be used as the body’s primary energy source. When we are not in ketosis, glucose (derived from carbohydrate intake) is our body’s primary energy source. </p>
     </div>
 
             <!--Pros/Cons div-->
