added more CSS styling

--- a/Gluten/glutenindex.html
+++ b/Gluten/glutenindex.html
@@ -19,7 +19,7 @@
  
   <nav> 
   <!-- Toolbar using foundation formatting -->
-    <ul class="menu align-left">
+    <ul id = "navBar" class="menu align-left" >
   <!--Links to the main index page  -->
         <li class="is-active"><a href="../index.html">Main</a></li>
   <!-- Links to the Gluten Free Home page/index.html  -->
@@ -141,13 +141,14 @@
           <h3 id="recipe-name" class="flex justify-items-center font-bold"></h3>
           <img src="" alt="" id="food-img">          
           <a id="recipe-site" class="font-semibold py-2 mt-px">&#8594; Link to Recipe &#8592;</a>
+          
           <figure class="grid grid-cols-2 gap-6">        
             <ul id="list-ingred" class="">
-            <p class="font-semibold flex py-2">Lists of Ingredients <br></p>
+            <p class="font-bold flex py-2">Lists of Ingredients <br></p>
             </ul>
   
             <ul id="nutrient" class="">
-              <p class="font-semibold py-2">List of Key Nutrients</p>
+              <p class="font-bold py-2">List of Key Nutrients</p>
               <li class="omega3"></li>
               <li class="protein"></li>
               <li class="calcium"></li>
@@ -167,7 +168,6 @@
 <!-- <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.min.js"></script> -->
-<<<<<<< HEAD
 
     <!-- J Query Link -->
     <script 
@@ -177,14 +177,6 @@
     referrerpolicy="no-referrer">
     </script>
 
-=======
-<script 
-src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" 
-integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" 
-crossorigin="anonymous" 
-referrerpolicy="no-referrer">
-</script>
->>>>>>> 479fe3546381366e2b7988c996a263d49b4722fe
 <script src="./gluten-assets/glutenscript.js"></script>
 
 </body>
