--- a/index.html
+++ b/index.html
@@ -67,17 +67,23 @@
     </div>
 
 <br><br>
-    <span class="relative flex h-3 w-10">
-        <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"></span>
-        <span class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"></span>
-    </span>
-    <a href="mailto: paulnxn1@gmail.com">
-        <button
-            class="transition ease-in-out delay-200 bg-silver-500 hover:-translate-y-1 hover:scale-130 hover:bg-yellow-500 duration-300 button">
-            Email or Contact Us!
-        </button></a>
+ 
 
-        <br> <h3 class = "message"></h3>
+        <u><p id="userSubmit">Here is what your entered:</p></u>
+        <br> <h3 id = "message"></h3>
+
+
+<br><br><br>
+
+        <span class="relative flex h-3 w-10">
+            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-sky-400 opacity-75"></span>
+            <span class="relative inline-flex rounded-full h-3 w-3 bg-sky-500"></span>
+        </span>
+        <a href="mailto: paulnxn1@gmail.com">
+            <button
+                class="transition ease-in-out delay-200 bg-silver-500 hover:-translate-y-1 hover:scale-130 hover:bg-yellow-500 duration-300 button">
+                Email or Contact Us!
+            </button></a>
 
         <script src="./homepage.js"></script>
 
