--- a/Keto/ketoindex.html
+++ b/Keto/ketoindex.html
@@ -49,7 +49,7 @@
             <li>Although a reduction of sugar intake can be great, we still require some sugar in our diets so that our bodies function properly. </li>
         </ul>
     </div>
-
+        <!--Edamam Api Section-->
     <section class="flex justify-center self-center">
         <figure class="flex flex-col items-center">
           <h3 id="recipe-name" class="flex justify-items-center font-bold"></h3>
@@ -73,7 +73,7 @@
           <button id="generate" class="">Generate Another Recipe</button>
         </figure>
       </section>
-
+        <!--Keto Foods button-->
       <div class="container">
         <h1 class="h-tag">Click the button and see which foods are keto friendly!</h1>
         <button class="keto-button">Keto Foods</button>
