Added allergy text to vegan index.

--- a/Vegan/veganIndex.html
+++ b/Vegan/veganIndex.html
@@ -93,6 +93,11 @@
 
     </article>
 
+    <div id="allergy">
+      <p id="allergies">Common food-related allergies to look out for while on a vegan diet include tree nuts, peanuts, wheat/gluten and soy. 
+        It's still entirely possible to maintain a vegan diet even with these allergies, as there are many other food alternatives!</p>
+    </div>
+
     <section class="flex justify-center self-center">
       <figure class="flex flex-col items-center">
         <h3 id="recipe-name" class="flex justify-items-center font-bold"></h3>
