Added allergy info div to keto index.

--- a/Keto/ketoindex.html
+++ b/Keto/ketoindex.html
@@ -47,6 +47,11 @@
         </ul>
     </div>
 
+    <div id="allergy">
+        <p id="allergies">Common food-related allergies to look out for while on a keto diet include dairy, eggs, shellfish, tree nuts, peanuts, wheat and soy. 
+          It's still entirely possible to maintain a keto diet even with these allergies, as there are many other food alternatives!</p>
+      </div>
+
     <section class="flex justify-center self-center">
         <figure class="flex flex-col items-center">
           <h3 id="recipe-name" class="flex justify-items-center font-bold"></h3>
