--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
 <header>
 
-    <h1><strong>Welcome to Food Focus</strong></h1>
-    <p>A Page of Healthy Topics to Find Simple Recipes to Promote Focus!</p>
+   <marquee><strong> <h1 id = "h1">Welcome to Food Focus 🙇 </h1> </marquee>
+    <p>A Page of Healthy Topics to Find Simple Recipes to Promote Focus!</p> </strong>
     <br><br>
     <section id="topSection">
+        <img id ="firstImage" src="./Homepage Assets/ourGoalImg.png" alt="our goal" width="300" height="600">
         <p>Our purpose:</p>
         <p> Focus is key for novice developers, this site provides three healthy food groups [Vegan, Gluten-Free, Keto]
         </p>
