Added allergy div for gluten index.

--- a/Gluten/glutenindex.html
+++ b/Gluten/glutenindex.html
@@ -131,6 +131,11 @@
             <a href="//www.bbcgoodfood.com/howto/guide/top-10-tips-gluten-free-diet">Tips on Gluten Free from BBC</a>
         </p>
     
+      <div id="allergy">
+          <p id="allergies">The main, most self-explanatory food allergy to watch out for while on a gluten-free diet is wheat. There is no simple substitution for wheat, but baked-goods can be produced using non-wheat flours such as rice, sorghum, soy, tapioca or potato starch.
+            Foods made with other grains such as rice, quinoa and oats are great gluten-free alternatives!</p>
+      </div>
+
     <h2> Gluten Free Recipes</h2>    
     
     <!-- Area for restaurant search input to be connected to API -->
