--- a/Vegan/veganIndex.html
+++ b/Vegan/veganIndex.html
@@ -125,7 +125,7 @@
 
 
   <section class="flex justify-center m-0">
-   <form action="../homepage.html" 
+   <form action="../index.html" 
       class="container py-0 grid place-items-center m-0">
       <button class="bg-green-500 text-white hover:bg-green-200 font-bold py-2 px-4 items-center rounded">
       Lettuce take you back to the Main Page
