Added notes to html code

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Focus!</title>
 
-    <!--Tailwind CSS-->
+    <!--Tailwind CSS & CSS style sheet link-->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./Homepage Assets/css/homepagestyle.css">
 </head>
 
 <header>
 
+    <!--Top Section / Header with H1 Title Header in Motion Across Screen-->
    <marquee><strong> <h1 id = "h1">Welcome to Food Focus 🙇 </h1> </marquee>
     <p>A Page of Healthy Topics to Find Simple Recipes to Promote Focus!</p> </strong>
     <br><br>
@@ -31,7 +32,8 @@
 
 <body>
 
-
+<!--Mid Page Section Showing Each Food Group.  Each Food Group Links to their pages -->
+<!--All subpages will link back to the home index.html page-->
 
     <br><br><br><br>
 
@@ -49,7 +51,7 @@
 
 
     <br>
-
+<!--Section for the user to connect with team-->
     <div>
         <p> We would love to hear from you!</p>
         <p> Share your experience!</p>
@@ -59,6 +61,8 @@
 
         <p>If you'd like to get more information about these food groups, please let us know what we can provide!</p>
 
+
+<!--Text Area site where user will enter data - Local Storage will save the data and display it on the page-->
         <form>
         
             <p>Tell us your name & thoughts!</p>
@@ -69,11 +73,12 @@
 
 <br><br>
  
-
+<!--Here is where the local storage display the data inputted by user-->
         <u><p id="userSubmit">Here is what your entered:</p></u>
         <br> <h3 id = "message"></h3>
 
 
+<!--Contact Section with small animation-->
 <br><br><br>
 
         <span class="relative flex h-3 w-10">
